--- a/sample_programs/WebApplication/index.html
+++ b/sample_programs/WebApplication/index.html
@@ -13,6 +13,7 @@
         <p id="userchoose">&nbsp</p>
         <p id="computerchoose">&nbsp</p>
         <p id="result">&nbsp</p>
+        <p id="resultmessage">&nbsp</p>
         <hr>
         <p> Choose rock paper or scissor! </p>
         <br>
@@ -38,6 +39,7 @@
 
                 document.getElementById("computerchoose").innerHTML = "Computer picked " + data.computerchoose;
                 document.getElementById("result").innerHTML = data.result;
+                document.getElementById("resultmessage").innerHTML = data.resultmessage;
 
         })
 
